# hyperbeats

./: .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prometheus.yml  pyproject.toml  requirements.txt  vercel.json
.cursor/rules/: Project_Manager.mdc  documentation.mdc
.github/workflows/: ci.yml
backend/: __init__.py
backend/database/: connection.py  models.py
backend/hyperbeats/: __init__.py  config.py  dependencies.py  main.py
backend/hyperbeats/aggregator/: __init__.py  metrics_calculator.py  repo_aggregator.py
backend/hyperbeats/api/v1/: __init__.py  chart_activity.py  metrics_aggregate.py
backend/hyperbeats/middleware/: metrics_middleware.py
backend/hyperbeats/renderer/: __init__.py  png_renderer.py  svg_renderer.py
backend/hyperbeats/security/: access_control.py  rate_limiter.py
backend/hyperbeats/themes/: __init__.py  predefined.py  theme_manager.py
backend/hyperbeats/validators/: __init__.py  input_validator.py
backend/integrations/: __init__.py  github_client.py  github_models.py
docs/: API.md  EMBEDDING.md  Hyperbeats-Technical-Guide.md  TROUBLESHOOTING.md
docs/agile.task/: tasks.md
frontend/: jsconfig.json  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/api/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/status/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/sections/: ApiDocs.tsx  ChartPreview.tsx  EmbedGenerator.tsx  Features.tsx  Hero.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
scripts/: deploy-oracle-free.sh
tests/: __init__.py  conftest.py
tests/integration/: test_activity_chart.py  test_caching.py  test_metrics_aggregate.py
tests/unit/: test_themes.py  test_validators.py
